--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" type="text/css" href="css/nav.css" />
 </head>
 
+    <h1> Mt.Hood </h1>
+    <p> Mt.Hood is Massive!!! </p>
+
 <body>
     <h1 id="Test">This is a test</h1>
 </body>
