--- a/index.html
+++ b/index.html
@@ -11,13 +11,56 @@
     <link href="https://fonts.googleapis.com/css2?family=Supermercado+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/default.css" />
     <link rel="stylesheet" type="text/css" href="css/nav.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
-
-<body>
-    <section class="header">
-        <h1 class="test">This is a test</h1>
-    </section>
-    </main>
+<body class="pt-2">
+    <div class="container mt-4">
+        <div class="row">
+            <div class="col-12 col-sm-3 mb-4">
+                <div class="sticky-top pt-2">
+                    <div class="card shadow-sm p-3">
+                        <div class="active rounded p-2 border pointer">
+                            Home
+                        </div>
+                        <div class="rounded p-2 mt-1 pointer inactive">
+                            Yellowstone
+                        </div>
+                        <div class="rounded p-2 mt-1 pointer inactive">
+                            The Cascades
+                        </div>
+                        <div class="rounded p-2 mt-1 pointer inactive">
+                            Mt. Hood
+                        </div>
+                        <div class="rounded p-2 mt-1 pointer inactive">
+                            Rainier
+                        </div>
+                        <div class="rounded p-2 mt-1 pointer inactive">
+                            Olympic
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-9">
+                <div class="ml-2">
+                    <h1 class="bold">
+                        Welcome to Group 2
+                    </h1>
+                    <h4 class="text-secondary">
+                        On the National Parks of the United States
+                    </h4>
+                    <br />
+                    <div class="bold mb-2">Our members are: </div>
+                    <ul>
+                        <li class="mb-2">Luiz Ramos - <a href="" class="text-decoration-none link-info">Yellowstone Park</a></li>
+                        <li class="mb-2">Kelly Chapman - <a href="" class="text-decoration-none link-info">Yellowstone Park</a></li>
+                        <li class="mb-2">Edgar Vargas - <a href="" class="text-decoration-none link-info">Yellowstone Park</a></li>
+                        <li class="mb-2">Leo Aparra - <a href="" class="text-decoration-none link-info">Yellowstone Park</a></li>
+                        <li class="mb-2">Pablo Contreras - <a href="" class="text-decoration-none link-info">Yellowstone Park</a></li>
+                    </ul>
+                </div>
+                <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+            </div>
+        </div>
+    </div>
 </body>
-
 </html>
