Kelly adds navbar

--- a/index.html
+++ b/index.html
@@ -13,10 +13,20 @@
     <link rel="stylesheet" type="text/css" href="css/nav.css" />
 </head>
 
-<body>
-    <section class="header">
-        <h1 class="test">This is a test</h1>
-    </section>
+  <main class="wrapper">
+        <header>
+            <nav>
+                <ul class="topnav">
+                    <li><a class="selected" href="index.html">Home</a></li>
+                    <li><a href="cascades.html">North Cascades</a></li>
+                    <li><a href="hood.html">Mount Hood</a></li>
+                    <li><a href="olympic.html">Olympic</a></li>
+                    <li><a href="Rainier.html">Rainier</a></li>
+                    <li><a href="yellowstone.html">Yellowstone</a></li>
+                </ul>
+            </nav>
+        </header>
+
     </main>
 </body>
 
