Kelly adds navbar

--- a/hood.html
+++ b/hood.html
@@ -13,14 +13,23 @@
     <link rel="stylesheet" type="text/css" href="css/default.css" />
     <link rel="stylesheet" type="text/css" href="css/nav.css" />
 </head>
-
-<body>
+    
+    <body>
     <main class="wrapper">
-        <header>
-            <div class="bannerP">
-                <!--<img class="background" src="images/edgar_images/banner4-01.svg" alt="background_banner" loading="lazy">-->
-            </div>
-        </header>
+              <header>
+                <div class="bannerP">
+                </div>
+                    <nav>
+                        <ul class="topnav">
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="cascades.html">North Cascades</a></li>
+                            <li><a class="selected" href="hood.html">Mount Hood</a></li>
+                            <li><a href="olympic.html">Olympic</a></li>
+                            <li><a href="Rainier.html">Rainier</a></li>
+                            <li><a href="yellowstone.html">Yellowstone</a></li>
+                        </ul>
+                    </nav>
+                </header>
         <div class="page_id">
             <h1 class="titleP">Mt. Hood National Forest</h1>
             <h3 class="authorP">By: Pablo Contreras</h3>
@@ -95,12 +104,6 @@
                 <h3 class="source">Information on mountain height, source:<a href="https://www.fs.usda.gov/detail/mthood/about-forest/?cid=stelprdb5413606">USDA</a>
                 </h3>
             </div>
-
-
-
         </div>
-
-        <!--sources
-        banner image courtesy of U.S. Forest Service https://www.recreation.gov/camping/gateways/1106-->
     </main>
 </body>
