--- a/rainier.html
+++ b/rainier.html
@@ -18,8 +18,17 @@
     <main class="wrapper">
         <header>
             <div class="bannerE">
-                <!--<img class="background" src="images/edgar_images/banner4-01.svg" alt="background_banner" loading="lazy">-->
             </div>
+            <nav>
+                <ul class="topnav">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="cascades.html">North Cascades</a></li>
+                    <li><a href="hood.html">Mount Hood</a></li>
+                    <li><a href="olympic.html">Olympic</a></li>
+                    <li><a class="selected" href="Rainier.html">Rainier</a></li>
+                    <li><a href="yellowstone.html">Yellowstone</a></li>
+                </ul>
+            </nav>
         </header>
         <div class="page_id">
             <h1 class="titleE">Mt. Rainier National Park</h1>
