--- a/cascades.html
+++ b/cascades.html
@@ -25,7 +25,7 @@
                         <li><a class="selected" href="cascades.html">North Cascades</a></li>
                         <li><a href="hood.html">Mount Hood</a></li>
                         <li><a href="olympic.html">Olympic</a></li>
-                        <li><a href="Rainier.html">Rainier</a></li>
+                        <li><a href="rainier.html">Rainier</a></li>
                         <li><a href="yellowstone.html">Yellowstone</a></li>
                     </ul>
                </nav>
