--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="col-12 col-sm-3 mb-4">
                 <div class="sticky-top pt-2">
                     <div class="card shadow-sm p-3">
-                        <a href="/" class="text-decoration-none text-dark">
+                        <a href="#" class="text-decoration-none text-dark">
                             <div class="active rounded p-2 border pointer">
                                 Home
                             </div>
