Fixed links on list of members

--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
                     <br />
                     <div class="bold mb-2">Our members are: </div>
                     <ul>
-                        <li class="mb-2">Luiz Ramos - <a href="" class="text-decoration-none link-info">Yellowstone Park</a></li>
-                        <li class="mb-2">Kelly Chapman - <a href="" class="text-decoration-none link-info">Olympic National Park</a></li>
-                        <li class="mb-2">Edgar Vargas - <a href="" class="text-decoration-none link-info">Mt. Rainier National Park</a></li>
-                        <li class="mb-2">Leo Aparra - <a href="" class="text-decoration-none link-info">North Cascades National Park</a></li>
-                        <li class="mb-2">Pablo Contreras - <a href="" class="text-decoration-none link-info">Hood National Park</a></li>
+                        <li class="mb-2">Luiz Ramos - <a href="yellowstone.html" class="text-decoration-none link-info">Yellowstone Park</a></li>
+                        <li class="mb-2">Kelly Chapman - <a href="olympic.html" class="text-decoration-none link-info">Olympic National Park</a></li>
+                        <li class="mb-2">Edgar Vargas - <a href="rainier.html" class="text-decoration-none link-info">Mt. Rainier National Park</a></li>
+                        <li class="mb-2">Leo Aparra - <a href="cascades.html" class="text-decoration-none link-info">North Cascades National Park</a></li>
+                        <li class="mb-2">Pablo Contreras - <a href="hood.html" class="text-decoration-none link-info">Hood National Park</a></li>
                     </ul>
                     <br /><br /><br />
                     Find this project on
