--- a/yellowstone.html
+++ b/yellowstone.html
@@ -34,11 +34,98 @@
             <h1 class="titleL">Yellowstone National Park</h1>
             <h3 class="authorL">By: Luiz Ramos </h3>
         </div>
-        <div class="content_container"></div>
+        
+        <div class="content_container">
+            <div class="d-flex justify-content-center">
+                <h3>
+                    Yellowstone
+                </h3>
+            </div>
+            <hr>
+            <section class="row_one">
+                <div class="row_one_col_one">
+                    <p>
+                        Yellowstone was the first national park in the US, establish in 1876 by Ulysses Grant. It's the oldest continuously existing National Park in the world. 
+                    </p>
+                    <p>
+                        To this day, Yellowstone remains the second most visited national park in the United States to this day. It’s known for its geysers, of which there are over 500 of plus an additional 10,000 "thermal features", and its rich biodiversity. The park has the largest concentration of mammals in the continental United States, including grizzly bears, grey wolves, moose, buffalo and more.
+                    </p>
+                </div>
+                <aside class="row_one_col_two">
+                    <img src="images/luiz_images/Castle_Geyser__Yellowstone.jpg" alt="Geyser" width="100%"></img>
+                </aside>
+            </section>
+        </div>
+        <div class="content_container">
+            <div class="d-flex justify-content-center">
+                <h3>
+                    Visitor activities
+                </h3>
+            </div>
+            <hr>
+            <section class="row_one">
+                <aside class="row_one_col_one">
+                    <img src="images/luiz_images/madison-campground-11.jpg" alt="Buffalo near camp" width="100%"></img>
+                </aside>
+                <div class="row_one_col_two">
+                    <p>
+                        Although not every part of the 2.2 million acre park is accessible or trailable to the general public without a permit, there are more than 900 miles worth of hiking trails that are open during the spring and summer when the trails aren’t covered by snow and ice.                    </p>
+                    <p>
+                        The park also contains several camp grounds and lodges where visitors can stay, but some are only open during the summer and spring. Additionally, the most famous geysers can be visited all years, except when the roads are closed due to dangerous weather.                     </p>
+                </div>
+            </section>
+        </div>
+        <div class="content_container">
+            <div class="d-flex justify-content-center">
+                <h3>
+                    Winter advisory
+                </h3>
+            </div>
+            <hr>
+            <section class="row_one">
+                <div class="row_one_col_one">
+                    <p>
+                        While the park is open during the winter, temperatures can reach as low as -22F (-30C), and many park services are not available. So be sure to prepare. Skiing and snowshoeing is possible on some trails during the winter, but beware of thermal pools covered in ice, and for avalanches.                    
+                    </p>
+                </div>
+                <aside class="row_one_col_two">
+                    <img src="images/luiz_images/013118CanyonBJK_1000.jpg" alt="Skiiers" width="100%"></img>
+                </aside>
+            </section>
+            <div class="content_container">
+                <div class="d-flex justify-content-center">
+                    <h3>
+                        Sources
+                    </h3>
+                </div>
+                <hr>
+                <br />
+                <div>
+                    <h3 class="source">
+                        General information from and unmentioned images from:
+                        <br />
+                        <a href="https://www.nps.gov/aboutus/visitation-numbers.htm">National Park Service - Visitations</a>
+                        <br />
+                        <a href="https://www.nps.gov/yell/learn/historyculture/yellowstoneestablishment.htm">National Park Service - Yellowstone History</a>
+                        <br />
+                        <a href="https://www.nps.gov/yell/learn/historyculture/yellowstoneestablishment.htm">National Park Service - Yellowstone Facts</a>
+                        <br />
+                        <a href="https://www.nps.gov/yell/learn/historyculture/yellowstoneestablishment.htm">Yellowstone Lodges</a>
+                    </h3>
+                    <h3 class="source">
+                        Campground image from:
+                        <br />
+                        <a href="https://www.justahead.com/where-to-camp-in-yellowstone/">Just Ahead</a>
+                    </h3>
+                    <h3 class="source">
+                        Geyser image from:
+                        <br />
+                        <a href="https://money.yahoo.com/fastest-growing-towns-rural-america-200000434.html">Yahoo Money</a>
+                    </h3>
+                </div>
+        </div>
         <section class="full_text">
-            <p>
 
-            </p>
         </section>
 
 
