Adds Olympic np article

--- a/olympic.html
+++ b/olympic.html
@@ -34,21 +34,58 @@
             <h1 class="titleK">Olympic National Park</h1>
             <h3 class="authorK">By: Kelly Chapman</h3>
         </div>
-        <div class="content_container"></div>
-        <section class="full_text">
-            <p>
-
-            </p>
-        </section>
-
-
-
-
-
-        <!--sources
-    banner image courtesy of national park service https://www.nps.gov/olym/index.htm-->
-
+           <div class="content_container">
+            <h3 id="margin_left_6percent" class="chapter">Overview</h3>
+            <hr>
+            <section class="row_one">
+                <div class="row_one_col_one">
+                    <p>
+                        Situated in a remote corner of northwest Washington state, Olympic National Park is known for its incredible scenery and varied landscapes. Encounters with the mythical Bigfoot is a very real possibility for those trekking through the park, which is defined
+                        by three ecosystems: subalpine forest and meadow, temperate forest, and an extra dramatic stretch of the Pacific coast.
+                    </p>
+                </div>
+                <aside class="row_one_col_two">
+                    <img src="images/kelly_images/fog.svg" alt="scenery"></img>
+                </aside>
+            </section>
+            <h3 id="margin_left_5percent" class="chapter">Rainforest</h3>
+            <hr>
+            <section class="row_two">
+                <aside class="row_two_col_two">
+                    <img src="images/kelly_images/hoh.svg" alt="forest"></img>
+                </aside>
+                <div class="row_two_col_two">
+                    <p>
+                        Named after the Hoh river with its slate-hued waters running through, the Hoh Rain Forest is a dense and surreal canopy of moss covered trees. Both coniferous and deciduous species can be found here. With the average yearly precipitation of 140 inches
+                        certainly a contributing factor of the trees’ thriving and robust appearance.
+                    </p>
+                </div>
+            </section>
+            <h3 id="margin_left_6percent" class="chapter">Coastline</h3>
+            <hr>
+            <section class="row_three">
+                <div class="row_three_col_one">
+                    <p>
+                        This 73 mile stretch is a rare, undeveloped piece of wilderness coast. In addition to the protected land, species living in the intertidal areas are also protected within the boundary of the Olympic Coast National Marine Sanctuary. While those living
+                        further offshore, a variety of seabirds, seals, and sealions also receive protected status within the Washington Maritime National Refuge Complex.
+                    </p>
+                </div>
+                <aside class="row_three_col_two">
+                    <img src="images/kelly_images/beach.svg" alt="beach"></img>
+                </aside>
+            </section>
+            <h3 id="margin_left_6percent" class="chapter">Sources</h3>
+            <hr>
+            <div class="source">
+                <h3 class="source">Banner image courtesy of:<a href="https://www.nps.gov/olym/index.htm">National Park Service</a>
+                    <h3 class="source">All other images, source:<a href="https://wallpapercave.com/olympic-national-park-wallpapers">Wallpaper Cave</a>
+                        <h3 class="source">General information, source:<a href="https://en.wikipedia.org/wiki/Olympic_National_Park">Wikipedia</a>
+                            <h3 class="source">All other information, source:<a href="https://www.nps.gov/olym/planyourvisit/visiting-the-hoh.htm">National Park Service</a>
+            </div>
         </div>
-
     </main>
 </body>
+
+</html>
+
+
